# phishguard

./: .dockerignore  .env.example  .gitignore  .hf_spaces_config.yaml  .pre-commit-config.yaml  APP_URL_AUDIT.md  ARCHIVE_BACKLOG.md  BILLING_READINESS_REPORT.md  BUGS.md  CLEANUP_EXECUTION_REPORT.md  DAY_0_LAUNCH_PLAYBOOK.md  DEPLOYMENT_CHECKLIST.md  DETECTION_QUALITY_REPORT.md  DETECTION_V2_ROADMAP.md  Dockerfile  EXECUTION_BACKLOG.md  EXECUTION_MASTER_PLAN.md  EXECUTIVE_SCORECARD.md  FEATURE_REQUESTS.md  FIRST_100_USERS_DASHBOARD.md  FIRST_100_USERS_ROADMAP.md  FIRST_100_USERS_SYSTEM.md  FIRST_CUSTOMER_READINESS.md  FIRST_PAYMENT_SIMULATION.md  FIRST_REVENUE_PLAYBOOK.md  FIRST_USER_WALKTHROUGH.md  FRICTION_FIXES.md  GROWTH_READINESS_REPORT.md  LAUNCH_BLOCKERS_CHECKLIST.md  NEXT_14_DAYS_EXECUTION.md  PRIORITY_MATRIX.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_READINESS_PLAN.md  README.md  RELEASE_NOTES.md  RESTRUCTURING.md  ROADMAP.md  SECURITY_AUDIT.md  SIMPLIFICATION_PLAN.md  TECH_DEBT.md  (+20 more)
api_gateway/: api_keys.json  main.py
backend/: app.py
data/: phishguard.db  phishguard.db-shm  phishguard.db-wal  phishing_keywords.json  phishing_kits.json
docs/: BILLING_ARCHITECTURE.md  BILLING_MIGRATION_REPORT.md  GUMROAD_SETUP_GUIDE.md  api_docs.py  index.html  privacy.html  refund.html  security.html  terms.html
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
landing/: index.html
launch/: hacker-news.md  linkedin.md  product-hunt.md  reddit.md
plugins/: __init__.py
scripts/: check_webhook.py  check_webhook2.py  deploy.sh  (+3 more)
(+188 files in other folders)
